# ai-model-router

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: evaluator.py  runner.py
benchmarks/data/: prompts.json
research/: findings.md  writeup.md
router/: __init__.py  __main__.py  classifier.py  llm_classifier.py  models.py  providers.py  router.py  rules.py  types.py
tests/: test_benchmarks.py  test_llm_classifier.py  test_router.py
web/: package-lock.json  package.json
web/public/: app.js  index.html  styles.css
web/src/: classifier.ts  models.ts  server.ts
